; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_24222.c_makeconn.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_24222.c_makeconn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_in = type { i32 }
%struct.sockaddr = type { i32 }

@AF_INET = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4
@IPPROTO_TCP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"socket\00", align 1
@FIONBIO = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"ioctl\00", align 1
@errno = common dso_local global i64 0, align 8
@EINPROGRESS = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [8 x i8] c"connect\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @makeconn(%struct.sockaddr_in* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.sockaddr_in*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.sockaddr_in* %0, %struct.sockaddr_in** %3, align 8
  %6 = load i32, i32* @AF_INET, align 4
  %7 = load i32, i32* @SOCK_STREAM, align 4
  %8 = load i32, i32* @IPPROTO_TCP, align 4
  %9 = call i32 @socket(i32 %6, i32 %7, i32 %8)
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %1
  %13 = call i32 @perror(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %2, align 4
  br label %39

14:                                               ; preds = %1
  store i32 1, i32* %5, align 4
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* @FIONBIO, align 4
  %17 = call i64 @ioctl(i32 %15, i32 %16, i32* %5, i32 4)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %14
  %20 = call i32 @perror(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @close(i32 %21)
  store i32 -1, i32* %2, align 4
  br label %39

23:                                               ; preds = %14
  store i64 0, i64* @errno, align 8
  %24 = load i32, i32* %4, align 4
  %25 = load %struct.sockaddr_in*, %struct.sockaddr_in** %3, align 8
  %26 = bitcast %struct.sockaddr_in* %25 to %struct.sockaddr*
  %27 = call i32 @connect(i32 %24, %struct.sockaddr* %26, i32 8)
  %28 = icmp eq i32 %27, -1
  br i1 %28, label %29, label %37

29:                                               ; preds = %23
  %30 = load i64, i64* @errno, align 8
  %31 = load i64, i64* @EINPROGRESS, align 8
  %32 = icmp ne i64 %30, %31
  br i1 %32, label %33, label %37

33:                                               ; preds = %29
  %34 = call i32 @perror(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0))
  %35 = load i32, i32* %4, align 4
  %36 = call i32 @close(i32 %35)
  store i32 -1, i32* %2, align 4
  br label %39

37:                                               ; preds = %29, %23
  %38 = load i32, i32* %4, align 4
  store i32 %38, i32* %2, align 4
  br label %39

39:                                               ; preds = %37, %33, %19, %12
  %40 = load i32, i32* %2, align 4
  ret i32 %40
}

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i64 @ioctl(i32, i32, i32*, i32) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @connect(i32, %struct.sockaddr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
